charts/network-policy/eric-eas-k6-cmn-topology-svc-core-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-eas-k6-cmn-topology-svc-core-policy
spec:
  podSelector:
    matchLabels:
      app: eric-oss-cmn-topology-svc-core
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: eas-k6
      - podSelector:
          matchLabels:
            app: eric-pm-server
