charts/network-policy/eric-eas-k6-eo-enm-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-eas-k6-eo-enm-adapter-policy
spec:
  podSelector:
    matchLabels:
      app: eric-eo-enm-adapter
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: eas-k6
        - podSelector:
            matchLabels:
              app: eric-pm-server
