charts/network-policy/eric-eas-k6-ncmp-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-eas-k6-ncmp-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-oss-ncmp
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: eas-k6
      - podSelector:
          matchLabels:
            app: eric-pm-server
