charts/network-policy/eric-eas-k6-sef-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-eas-k6-sef-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-sef-exposure-api-manager
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: eric-oss-eas-app-engineering
        - podSelector:
            matchLabels:
              app: eas-k6
