charts/network-policy/eric-eas-k6-subsys-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-eas-k6-subsys-policy
spec:
  podSelector:
    matchLabels:
      app: eric-eo-subsystem-management
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: eas-k6
      - podSelector:
          matchLabels:
            app: eric-pm-server
